dfir_rs/tests/snapshots/surface_loop__enumerate_loop@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_loop.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter(0..5)</code>"/]:::pullClass
2v1[\"(2v1) <code>batch()</code>"/]:::pullClass
3v1[/"(3v1) <code>tee()</code>"\]:::pushClass
4v1[\"(4v1) <code>repeat_n(3)</code>"/]:::pullClass
5v1[\"(5v1) <code>enumerate::&lt;'none&gt;()</code>"/]:::pullClass
6v1[/"(6v1) <code>for_each(|x| result1_send.send(x).unwrap())</code>"\]:::pushClass
7v1[\"(7v1) <code>repeat_n(3)</code>"/]:::pullClass
8v1[\"(8v1) <code>enumerate::&lt;'loop&gt;()</code>"/]:::pullClass
9v1[/"(9v1) <code>for_each(|x| result2_send.send(x).unwrap())</code>"\]:::pushClass
10v1["(10v1) <code>handoff</code>"]:::otherClass
11v1["(11v1) <code>handoff</code>"]:::otherClass
12v1["(12v1) <code>handoff</code>"]:::otherClass
2v1-->3v1
1v1-->10v1
5v1-->6v1
4v1-->5v1
3v1-->11v1
8v1-->9v1
7v1-->8v1
3v1-->12v1
10v1-->2v1
11v1-->4v1
12v1-->7v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    subgraph sg_1v1_var_init ["var <tt>init</tt>"]
        style sg_1v1_var_init fill:transparent
        1v1
    end
end
subgraph loop_1v1 ["loop_1v1"]
    subgraph sg_2v1 ["sg_2v1 stratum 1"]
        subgraph sg_2v1_var_batch_init ["var <tt>batch_init</tt>"]
            style sg_2v1_var_batch_init fill:transparent
            2v1
            3v1
        end
    end
end
subgraph loop_2v1 ["loop_2v1"]
    subgraph sg_3v1 ["sg_3v1 stratum 2"]
        4v1
        5v1
        6v1
    end
    subgraph sg_4v1 ["sg_4v1 stratum 2"]
        7v1
        8v1
        9v1
    end
end
