dfir_rs/tests/snapshots/surface_loop__flo_repeat_n_nested@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_loop.rs
expression: "df.meta_graph().unwrap().to_mermaid(& Default :: default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter([&quot;alice&quot;, &quot;bob&quot;])</code>"/]:::pullClass
2v1[\"(2v1) <code>batch()</code>"/]:::pullClass
3v1[\"(3v1) <code>repeat_n(3)</code>"/]:::pullClass
4v1[\"(4v1) <code>inspect(|x| println!(&quot;A {:?} {}&quot;, x, context.is_first_loop_iteration()))</code>"/]:::pullClass
5v1[\"(5v1) <code>repeat_n(3)</code>"/]:::pullClass
6v1[\"(6v1) <code>inspect(|x| println!(&quot;B {:?} {}&quot;, x, context.is_first_loop_iteration()))</code>"/]:::pullClass
7v1[/"(7v1) <code>for_each(|x| result_send.send(x).unwrap())</code>"\]:::pushClass
8v1["(8v1) <code>handoff</code>"]:::otherClass
9v1["(9v1) <code>handoff</code>"]:::otherClass
10v1["(10v1) <code>handoff</code>"]:::otherClass
1v1-->8v1
3v1-->4v1
2v1-->9v1
6v1-->7v1
5v1-->6v1
4v1-->10v1
8v1-->2v1
9v1-->3v1
10v1-->5v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    subgraph sg_1v1_var_usrs1 ["var <tt>usrs1</tt>"]
        1v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1
    subgraph sg_2v1_var_usrs2 ["var <tt>usrs2</tt>"]
        2v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 2"]
    3v1
    4v1
    subgraph sg_3v1_var_usrs3 ["var <tt>usrs3</tt>"]
        3v1
        4v1
    end
end
subgraph sg_4v1 ["sg_4v1 stratum 3"]
    5v1
    6v1
    7v1
end
