dfir_rs/tests/snapshots/surface_loop__flo_syntax@graphvis_dot.snap
---
source: dfir_rs/tests/surface_loop.rs
expression: "df.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([\"alice\", \"bob\"])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) source_stream(iter_batches_stream(0..12, 3))", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) batch()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) flatten()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) batch()", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) flatten()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) cross_join::<'static, 'tick>()", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) for_each(|(user, message)| {\l    println!(\"{}: notify {} of {}\", context.current_tick(), user, message)\l})\l", shape=house, fillcolor="#ffff88"]
    n9v1 [label="(n9v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n10v1 [label="(n10v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n4v1 -> n7v1 [label="0"]
    n3v1 -> n4v1
    n1v1 -> n9v1
    n6v1 -> n7v1 [label="1"]
    n5v1 -> n6v1
    n2v1 -> n10v1
    n7v1 -> n8v1
    n9v1 -> n3v1
    n10v1 -> n5v1
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        subgraph "cluster_sg_1v1_var_users" {
            label="var users"
            n1v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n2v1
        subgraph "cluster_sg_2v1_var_messages" {
            label="var messages"
            n2v1
        }
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 0"
        n3v1
        n4v1
        n5v1
        n6v1
        n7v1
        n8v1
        subgraph "cluster_sg_3v1_var_cp" {
            label="var cp"
            n7v1
            n8v1
        }
    }
}
